Add new ANSI sequences CNL and CPL

- It implements Cursor Next Line (CNL) sequence.
- It implments Cursor Previous Line (CPL) sequence.
- Ex: echo -e "Hello\e[3EWorld" or echo -e "Hello\e[3FWorld"

BUG: 418519
FIXED-IN: 20.08

https://invent.kde.org/utilities/konsole/-/merge_requests/116